test/testdata/functions/redefined_parameter_error.lox
fun f(x) {
  var x = 1; // error: x has already been declared
  print x;
}

f(1);
